_sass/cookie-consent-sexy.scss
.cookie-consent {
  position: fixed;
  bottom: 0;
  width: 100%;
  background: inherit;

  overflow-y: hidden;
  max-height: 0;
  transition: all cubic-bezier(0, 1, 0.5, 1) .5s;

  &__wrapper {
    padding: 1rem 0;
    border-top: 3px solid transparent;

    &:before {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background: linear-gradient(to right, $primary-color, $secondary-color);
      top: 0;
      left: 0;
    }
  }

  &__message {
    margin-bottom: 1rem;
  }

  &__button {
    margin: 0;
  }

  &--active {
    max-height: 500px;
  }
}

